fix buildings